clang/test/BSC/Negative/NullabilityCheck/null_pointer_constant/null_pointer_constant_1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// _Owned pointer initialization rejects void pointer null constants.
void init_owned_pointer(void) {
  int *_Owned p2 = (void *)0; // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'int *_Owned'}}
}

// _Owned pointer assignment rejects void pointer null constants.
void assign_owned_pointer(void) {
  int *_Owned p;
  p = (void *)0; // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'int *_Owned'}}
}

void take_owned(int *_Owned p); // expected-note {{passing argument to parameter 'p' here}}

// _Owned pointer arguments reject void pointer null constants.
void call_owned_pointer(void) {
  take_owned((void *)0); // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'int *_Owned'}}
}

// _Owned pointer returns reject void pointer null constants.
int *_Owned return_owned_void_zero(void) {
  return (void *)0; // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'int *_Owned'}}
}

// _Borrow pointer initialization rejects void pointer null constants.
void init_borrow_pointer(void) {
  int *_Borrow p2 = (void *)0; // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow'}}
}

// _Borrow pointer assignment rejects void pointer null constants.
void assign_borrow_pointer(int *_Borrow p) {
  p = (void *)0; // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow'}}
}

void take_borrow(int *_Borrow p); // expected-note {{passing argument to parameter 'p' here}}

// _Borrow pointer arguments reject void pointer null constants.
void call_borrow_pointer(void) {
  take_borrow((void *)0); // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow'}}
}

// _Borrow pointer returns reject void pointer null constants.
int *_Borrow return_borrow_void_zero(int *_Borrow p) {
  return (void *)0; // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow'}}
}

// _Owned pointer initialization in a safe function rejects void pointer null constants.
_Safe void safe_func_init_owned_pointer(void) {
  int *_Owned p2 = (void *)0; // expected-error {{conversion from type 'void *' to 'int *_Owned' is forbidden in the safe zone}}
}

// _Owned pointer assignment in a safe function rejects void pointer null constants.
_Safe void safe_func_assign_owned_pointer(void) {
  int *_Owned p;
  p = (void *)0; // expected-error {{conversion from type 'void *' to 'int *_Owned' is forbidden in the safe zone}}
}

_Safe void safe_take_owned(int *_Owned p); // expected-note {{passing argument to parameter 'p' here}}

// _Owned pointer arguments in a safe function reject void pointer null constants.
_Safe void safe_func_call_owned_pointer(void) {
  safe_take_owned((void *)0); // expected-error {{conversion from type 'void *' to 'int *_Owned' is forbidden in the safe zone}}
}

// _Owned pointer returns from a safe function reject void pointer null constants.
_Safe int *_Owned safe_return_owned_void_zero(void) {
  return (void *)0; // expected-error {{conversion from type 'void *' to 'int *_Owned' is forbidden in the safe zone}}
}

// _Borrow pointer initialization in a safe function rejects void pointer null constants.
_Safe void safe_func_init_borrow_pointer(void) {
  int *_Borrow p2 = (void *)0; // expected-error {{conversion from type 'void *' to 'int *_Borrow' is forbidden in the safe zone}}
}

// _Borrow pointer assignment in a safe function rejects void pointer null constants.
_Safe void safe_func_assign_borrow_pointer(int *_Borrow p) {
  p = (void *)0; // expected-error {{conversion from type 'void *' to 'int *_Borrow' is forbidden in the safe zone}}
}

_Safe void safe_take_borrow(int *_Borrow p); // expected-note {{passing argument to parameter 'p' here}}

// _Borrow pointer arguments in a safe function reject void pointer null constants.
_Safe void safe_func_call_borrow_pointer(void) {
  safe_take_borrow((void *)0); // expected-error {{conversion from type 'void *' to 'int *_Borrow' is forbidden in the safe zone}}
}

// _Borrow pointer returns from a safe function reject void pointer null constants.
_Safe int *_Borrow safe_return_borrow_void_zero(int *_Borrow p) {
  return (void *)0; // expected-error {{conversion from type 'void *' to 'int *_Borrow' is forbidden in the safe zone}}
}
